# SecretSanta

./: README.md
.github/workflows/: c-cpp.yml  cmake-single-platform.yml
secret_santa/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  participant_manager.cpp  participant_manager.h  secret_santa_participant.cpp  secret_santa_participant.h
